bug fix alignement titre smartphone

--- a/style.css
+++ b/style.css
@@ -25,21 +25,18 @@ body
 
 
 
-#header_container
-{
-	
-	display:flex;
-	justify-content: space-between;
-	align-items: center;
-	background-color:#ffffff;
-	
-	
-}
+
 
 @media screen and (max-width: 399px) /*affichage vertical pour smartphone dont largeur inférieur à 400 pixels*/
 {
 	#header_container
 	{
+		justify-content: flex-start; 
+	}
+
+	#header_container
+	{
+		margin-left:20px; /*évite de coller le texte au logo*/
 		font-size: 16px;
 		height:54px;
 	}
@@ -109,6 +106,11 @@ body
 {
 	#header_container
 	{
+		justify-content: space-between; 
+	}
+
+	#header_container
+	{
 		font-size: 16px;
 		height:54px;
 	}
@@ -173,6 +175,14 @@ body
 }
 
 
+
+#header_container
+{
+	
+	display:flex;
+	align-items: center;
+	background-color:#ffffff;
+}
 
 #logo_simplon 
 {
